<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="RetirementCalculator" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Monthly investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZsG-WZ-Aic">
                                <rect key="frame" x="20" y="44" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="investment"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your current age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eV9-ox-Isc">
                                <rect key="frame" x="20" y="86" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="age"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Your planned retirement age" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8eu-Mk-6hQ">
                                <rect key="frame" x="20" y="128" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="retirement"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Average interest rate of investments" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SF8-Aa-jzw">
                                <rect key="frame" x="20" y="170" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="investment"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Current savings" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="y9P-PZ-8YW">
                                <rect key="frame" x="20" y="212" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="saving"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qS1-wh-nDl">
                                <rect key="frame" x="20" y="254" width="374" height="30"/>
                                <color key="backgroundColor" red="0.2627450980392157" green="0.5725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="amount_button"/>
                                <state key="normal" title="Calculate retirement amount">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="calculateButton_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e56-9p-6bo"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter some values to calculate your retirement amount." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QC9-Sh-1wr">
                                <rect key="frame" x="20" y="292" width="374" height="53"/>
                                <accessibility key="accessibilityConfiguration" identifier="result_label"/>
                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="22"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="y9P-PZ-8YW" firstAttribute="top" secondItem="SF8-Aa-jzw" secondAttribute="bottom" constant="8" id="3nW-bS-y1e"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eV9-ox-Isc" secondAttribute="trailing" constant="20" id="5n2-YE-nAl"/>
                            <constraint firstItem="8eu-Mk-6hQ" firstAttribute="top" secondItem="eV9-ox-Isc" secondAttribute="bottom" constant="8" id="7CD-23-ZYi"/>
                            <constraint firstItem="8eu-Mk-6hQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="90s-bC-O9b"/>
                            <constraint firstItem="qS1-wh-nDl" firstAttribute="top" secondItem="y9P-PZ-8YW" secondAttribute="bottom" constant="8" id="MSP-fN-sOd"/>
                            <constraint firstItem="eV9-ox-Isc" firstAttribute="top" secondItem="ZsG-WZ-Aic" secondAttribute="bottom" constant="8" id="Xji-8b-zf1"/>
                            <constraint firstItem="QC9-Sh-1wr" firstAttribute="top" secondItem="qS1-wh-nDl" secondAttribute="bottom" constant="8" id="c51-fv-v32"/>
                            <constraint firstItem="qS1-wh-nDl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="ciZ-Hj-FTb"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="QC9-Sh-1wr" secondAttribute="trailing" constant="20" id="d96-xl-0JB"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qS1-wh-nDl" secondAttribute="trailing" constant="20" id="dpM-14-gJn"/>
                            <constraint firstItem="eV9-ox-Isc" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="e6V-aY-JFw"/>
                            <constraint firstItem="ZsG-WZ-Aic" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="eC2-bD-yTC"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="SF8-Aa-jzw" secondAttribute="trailing" constant="20" id="ecY-tI-Aj8"/>
                            <constraint firstItem="y9P-PZ-8YW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="gGf-ZK-rhA"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8eu-Mk-6hQ" secondAttribute="trailing" constant="20" id="kRF-Fe-kio"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="ZsG-WZ-Aic" secondAttribute="trailing" constant="20" id="njK-wZ-QnL"/>
                            <constraint firstItem="ZsG-WZ-Aic" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pwL-n0-KRD"/>
                            <constraint firstItem="SF8-Aa-jzw" firstAttribute="top" secondItem="8eu-Mk-6hQ" secondAttribute="bottom" constant="8" id="uyW-5l-2tP"/>
                            <constraint firstItem="QC9-Sh-1wr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="v8Y-6Q-daR"/>
                            <constraint firstItem="SF8-Aa-jzw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="vR7-Vs-6A0"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y9P-PZ-8YW" secondAttribute="trailing" constant="20" id="zpa-U2-ebR"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="ageTextField" destination="eV9-ox-Isc" id="aqC-oK-qzF"/>
                        <outlet property="interestRateTextField" destination="SF8-Aa-jzw" id="gog-cF-sDH"/>
                        <outlet property="monthlyInvestmentsTextField" destination="ZsG-WZ-Aic" id="N8I-CL-tUY"/>
                        <outlet property="resultLabel" destination="QC9-Sh-1wr" id="63m-zh-whU"/>
                        <outlet property="retirementAgeTextField" destination="8eu-Mk-6hQ" id="DbG-ni-8ZZ"/>
                        <outlet property="savingsTextField" destination="y9P-PZ-8YW" id="hpd-cO-iV4"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
        </scene>
    </scenes>
</document>
